More  work on the deskbands, they should be ready to test but are not being registered properly.

--- a/SharpShell/Samples/DeskBand/WebSearchDeskBand/WebSearchDeskBand.csproj
+++ b/SharpShell/Samples/DeskBand/WebSearchDeskBand/WebSearchDeskBand.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="WebSearchDeskBand.cs" />
     <Compile Include="DeskBandUI.cs">
       <SubType>UserControl</SubType>
     </Compile>
