--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Attributes\HandlerSubkeyAttribute.cs" />
     <Compile Include="Attributes\ServerTypeAttribute.cs" />
     <Compile Include="Attributes\SpecialClassKeyAttribute.cs" />
+    <Compile Include="Components\CategoryManager.cs" />
     <Compile Include="Components\ExtractIconImpl.cs" />
     <Compile Include="Extensions\EnumExtensions.cs" />
     <Compile Include="Extensions\GuidExtensions.cs" />
@@ -85,19 +86,26 @@
     <Compile Include="Interop\ASSOCCLASS.cs" />
     <Compile Include="Interop\ASSOCIATIONELEMENT.cs" />
     <Compile Include="Interop\BITMAPV5HEADER.cs" />
+    <Compile Include="Interop\CATEGORYINFO.cs" />
     <Compile Include="Interop\COLORREF.cs" />
     <Compile Include="Interop\DEFCONTEXTMENU.cs" />
+    <Compile Include="Interop\DESKBANDINFO.cs" />
     <Compile Include="Interop\DRAWITEMSTRUCT.cs" />
     <Compile Include="Interop\GILInFlags.cs" />
+    <Compile Include="Interop\ICatRegister.cs" />
     <Compile Include="Interop\ICommDlgBrowser.cs" />
     <Compile Include="Interop\IContextMenuCB.cs" />
     <Compile Include="Interop\IDefaultExtractIconInit.cs" />
+    <Compile Include="Interop\IDeskBand.cs" />
+    <Compile Include="Interop\IDeskBand2.cs" />
     <Compile Include="Interop\IExtractIconA.cs" />
     <Compile Include="Interop\IExtractIconW.cs" />
+    <Compile Include="Interop\IInputObjectSite.cs" />
     <Compile Include="Interop\IMAGEINFO.cs" />
     <Compile Include="Interop\IMAGELISTDRAWPARAMS.cs" />
     <Compile Include="Interop\IFolderView.cs" />
     <Compile Include="Interop\IPersistIDList.cs" />
+    <Compile Include="Interop\IPersistStream.cs" />
     <Compile Include="Interop\LVCFMT.cs" />
     <Compile Include="Interop\MARGINS.cs" />
     <Compile Include="Interop\MEASUREITEMSTRUCT.cs" />
