--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -190,6 +190,7 @@
     <Compile Include="SharpContextMenu\InvokeCommandInfo.cs" />
     <Compile Include="SharpContextMenu\PARGB32.cs" />
     <Compile Include="SharpDataHandler\SharpDataHandler.cs" />
+    <Compile Include="SharpDeskBand\BandOptions.cs" />
     <Compile Include="SharpDeskBand\SharpDeskBand.cs" />
     <Compile Include="SharpIconHandler\SharpIconHandler.cs" />
     <Compile Include="SharpIconOverlayHandler\SharpIconOverlayHandler.cs" />
