Icon handler fixed, looks like disable low il process isolation as well as a dedicated surrogate has helped.
This will now be the default, the surrogate needs to be configurable.

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -227,12 +227,14 @@
     <Compile Include="SharpNamespaceExtension\ShellNamespaceFolderIdListEnumerator.cs" />
     <Compile Include="SharpNamespaceExtension\StandardPropertyKey.cs" />
     <Compile Include="SharpNamespaceExtension\VirtualFolder.cs" />
+    <Compile Include="SharpPreviewHandler\PreviewHandlerAttribute.cs" />
     <Compile Include="SharpPreviewHandler\PreviewHandlerControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="SharpPreviewHandler\PreviewHandlerHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Exceptions\ServerRegistrationException.cs" />
     <Compile Include="SharpPreviewHandler\SharpPreviewHandler.cs" />
     <Compile Include="SharpPropertySheet\SharpPropertyPage.cs">
       <SubType>UserControl</SubType>
