Introduced the registrar to separate concerns. Code is working, except if file system logging is enabled, this needs to be diagnosed.

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -235,6 +235,7 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Exceptions\ServerRegistrationException.cs" />
+    <Compile Include="SharpPreviewHandler\PreviewHandlerRegistrar.cs" />
     <Compile Include="SharpPreviewHandler\SharpPreviewHandler.cs" />
     <Compile Include="SharpPropertySheet\SharpPropertyPage.cs">
       <SubType>UserControl</SubType>
