Multiple loggers can be configured, a simple debug log is also available.

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Components\ExtractIconImpl.cs" />
     <Compile Include="Configuration\LoggingMode.cs" />
     <Compile Include="Configuration\SystemConfiguration.cs" />
+    <Compile Include="Diagnostics\Loggers\Copy of EventLogLogger.cs" />
     <Compile Include="Diagnostics\Loggers\EventLogLogger.cs" />
     <Compile Include="Diagnostics\Loggers\FileLogger.cs" />
     <Compile Include="Diagnostics\Loggers\ILogger.cs" />
