Updated the regression tests for the preview handlers.

--- a/SharpShell/Samples/PreviewHandler/IconPreviewHandler/IconPreviewHandler.csproj
+++ b/SharpShell/Samples/PreviewHandler/IconPreviewHandler/IconPreviewHandler.csproj
@@ -85,11 +85,12 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <None Include="Dependencies\IconLib.dll" />
+    <None Include="Properties\Dependencies\IconLib.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\Build\Samples"</PostBuildEvent>
+    <PostBuildEvent>copy "$(TargetPath)" "$(SolutionDir)..\Build\Samples"
+copy "$(TargetDir)IconLib.dll" "$(SolutionDir)..\Build\Samples"</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
