Event log can be enabled via SRM.

--- a/SharpShell/Tools/ServerRegistrationManager/ServerRegistrationManager.csproj
+++ b/SharpShell/Tools/ServerRegistrationManager/ServerRegistrationManager.csproj
@@ -66,6 +66,7 @@
       <Link>Properties\SharedAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="Actions\ConfigAction.cs" />
+    <Compile Include="Actions\EnableEventLogAction.cs" />
     <Compile Include="Actions\ShowHelpAction.cs" />
     <Compile Include="Application.cs" />
     <Compile Include="OutputService\IOutputService.cs" />
