FIX: Fixed a bug which caused server registration manager to fail registering the server if embedded resource stream was null

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ Build/Tools/ServerManager.vshost.exe.manifest
 Release/2.*
 Release/nuspec/SharpShell/lib
 Release/nuspec/SharpShellTools/lib
+*.opendb
