--- a/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
+++ b/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Win32HelperTests.cs" />
     <Compile Include="PidlManagerTests.cs" />
     <Compile Include="ShellInteropTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
