feat: added the IRegistry service
This is the first key step in being able to provide much more extensive
testing for SharpShell. By ensuring all registry access is through an
interface, we can much more easily provide mocks or test
implementations. The end goal is that key operations, such as server
registration, are thoroughly tested to create structures in the registry
of the expected shape.

--- a/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
+++ b/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
@@ -56,7 +56,12 @@
   <ItemGroup>
     <Compile Include="Diagnostics\Loggers\FileLogger.cs" />
     <Compile Include="Helpers\Win32HelperTests.cs" />
+    <Compile Include="InMemoryRegistry.cs" />
+    <Compile Include="InMemoryRegistryKey.cs" />
     <Compile Include="PidlManagerTests.cs" />
+    <Compile Include="Registry\WindowsRegistryKeyTests.cs" />
+    <Compile Include="Registry\WindowsRegistryTests.cs" />
+    <Compile Include="ServiceRegistry\ServiceRegistryTests.cs" />
     <Compile Include="ShellInteropTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
