--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -197,9 +197,16 @@
     <Compile Include="Pidl\IdList.cs" />
     <Compile Include="Pidl\PidlManager.cs" />
     <Compile Include="Pidl\ShellId.cs" />
+    <Compile Include="Registry\InMemoryRegistry.cs" />
+    <Compile Include="Registry\IRegistry.cs" />
+    <Compile Include="Registry\IRegistryKey.cs" />
+    <Compile Include="Registry\WindowsRegistry.cs" />
+    <Compile Include="Registry\InMemoryRegistryKey.cs" />
+    <Compile Include="Registry\WindowsRegistryKey.cs" />
     <Compile Include="ServerRegistration\ClassRegistration.cs" />
     <Compile Include="ServerRegistration\ShellExtensionType.cs" />
     <Compile Include="ServerRegistration\SpecialRegistryClass.cs" />
+    <Compile Include="ServiceRegistry\ServiceRegistry.cs" />
     <Compile Include="SharpContextMenu\InvokeCommandInfo.cs" />
     <Compile Include="SharpContextMenu\PARGB32.cs" />
     <Compile Include="SharpDataHandler\SharpDataHandler.cs" />
