--- a/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
+++ b/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
@@ -56,11 +56,11 @@
   <ItemGroup>
     <Compile Include="Diagnostics\Loggers\FileLogger.cs" />
     <Compile Include="Helpers\Win32HelperTests.cs" />
-    <Compile Include="InMemoryRegistry.cs" />
-    <Compile Include="InMemoryRegistryKey.cs" />
     <Compile Include="PidlManagerTests.cs" />
     <Compile Include="Registry\WindowsRegistryKeyTests.cs" />
+    <Compile Include="Registry\InMemoryRegistryTests.cs" />
     <Compile Include="Registry\WindowsRegistryTests.cs" />
+    <Compile Include="ServerRegistration\ServerRegistrationManager.cs" />
     <Compile Include="ServiceRegistry\ServiceRegistryTests.cs" />
     <Compile Include="ShellInteropTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
