--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -197,6 +197,8 @@
     <Compile Include="Pidl\IdList.cs" />
     <Compile Include="Pidl\PidlManager.cs" />
     <Compile Include="Pidl\ShellId.cs" />
+    <Compile Include="Registry\InMemoryRegistry.cs" />
+    <Compile Include="Registry\InMemoryRegistryKey.cs" />
     <Compile Include="Registry\IRegistry.cs" />
     <Compile Include="Registry\IRegistryKey.cs" />
     <Compile Include="Registry\WindowsRegistry.cs" />
