fix: fix registration for unknown file types
This PR ensures that if a file extension, or the class of an extension
is missing during registration, we create it.

--- a/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
+++ b/SharpShell/SharpShell.Tests/SharpShell.Tests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Registry\WindowsRegistryKeyTests.cs" />
     <Compile Include="Registry\InMemoryRegistryTests.cs" />
     <Compile Include="Registry\WindowsRegistryTests.cs" />
+    <Compile Include="ServerRegistration\FileExtensionClassTests.cs" />
     <Compile Include="ServerRegistration\ServerRegistrationManagerTests.cs" />
     <Compile Include="ServiceRegistry\ServiceRegistryTests.cs" />
     <Compile Include="ShellInteropTests.cs" />
