Complete redone of SRM as long with some major changed to SR projects and multiple class-wide and project-wide cleanups
List of changes:
* SRM no longer loads assemblies with MEF but rather with Reflection and in sand boxed application domain
* SR and SRM no longer keep assemblies open
* SR updated to .Net4.62.2
* SRM now supports installation of older versions
* It is now possible to get server information without loading a server
* Installation and Registration information are not available separately
* SR updated to allow manipulation of all registered extensions including managed extensions
* Multiple `enum` types are strongly valued to act as a reminder to not change the value of items for backward compatibility
* Executing CustomRegisterFunction and CustomUnregisterFunction now respects the compiled version of SharpShell
* Public `Attribute`s are no longer need to be strongly typed  to the assembly to retrieve information
* RegistrationType enum renamed to RegistrationScope
* SharpShellInfo now contains information about the used SharpShell assembly used by a SharpShellServer
* SR ShellDebugger now redraws on resize
* SR TestShell functionality temporarily disabled

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -58,13 +58,8 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.EnterpriseServices" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\SharedAssemblyInfo.cs">
@@ -208,6 +203,11 @@
     <Compile Include="Registry\WindowsRegistryKey.cs" />
     <Compile Include="ServerRegistration\ClassRegistration.cs" />
     <Compile Include="ServerRegistration\FileExtensionClass.cs" />
+    <Compile Include="ServerRegistration\ManagedAssemblyInfo.cs" />
+    <Compile Include="ServerRegistration\SharpShellServerInfo.cs" />
+    <Compile Include="ServerRegistration\ServerSandBox.cs" />
+    <Compile Include="ServerRegistration\ServerInstallationInfo.cs" />
+    <Compile Include="ServerRegistration\ShellExtensionRegistrationInfo.cs" />
     <Compile Include="ServerRegistration\ShellExtensionType.cs" />
     <Compile Include="ServerRegistration\SpecialRegistryClass.cs" />
     <Compile Include="ServiceRegistry\ServiceRegistry.cs" />
@@ -302,9 +302,9 @@
     <Compile Include="NativeBridge\NativeBridge.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Interop\CLIPFORMAT.cs" />
-    <Compile Include="ServerRegistration\RegistrationType.cs" />
-    <Compile Include="ServerRegistration\ServerRegistationType.cs" />
-    <Compile Include="ServerRegistration\ShellExtensionRegistrationInfo.cs" />
+    <Compile Include="ServerRegistration\RegistrationScope.cs" />
+    <Compile Include="ServerRegistration\ServerInstallationType.cs" />
+    <Compile Include="ServerRegistration\ShellExtensionRegisteredAssociationInfo.cs" />
     <Compile Include="ServerRegistration\ServerRegistrationManager.cs" />
     <Compile Include="ServerType.cs" />
     <Compile Include="SharpContextMenu\SharpContextMenu.cs" />
