--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -93,7 +93,8 @@
     <Compile Include="Extensions\IDataObjectExtensions.cs" />
     <Compile Include="Helpers\ComStream.cs" />
     <Compile Include="Helpers\RegAsm.cs" />
-    <Compile Include="Helpers\STATFLAG.cs" />
+    <Compile Include="InitializeWithFileServer.cs" />
+    <Compile Include="Interop\STATFLAG.cs" />
     <Compile Include="Helpers\Win32Helper.cs" />
     <Compile Include="InitializeWithStreamServer.cs" />
     <Compile Include="Interop\ASSOCCLASS.cs" />
@@ -256,6 +257,7 @@
     </Compile>
     <Compile Include="Helpers\BitmapHelper.cs" />
     <Compile Include="Interop\DIB.cs" />
+    <Compile Include="SharpThumbnailHandler\SharpFileThumbnailHandler.cs" />
     <Compile Include="SharpThumbnailHandler\SharpThumbnailHandler.cs" />
     <Compile Include="ShellExtInitServer.cs" />
     <Compile Include="SharpDropHandler\SharpDropHandler.cs" />
