feat: SharpItemThumbnailHandler for thumbnails for shell items
This base class supports thumbnail handlers initialised with an
IShellItem object.

However,
https://docs.microsoft.com/en-us/windows/win32/api/thumbcache/nn-thumbcache-ithumbnailprovider
suggests that this would only ever be called if a 3rd party API calls
it, not the standard shell. This implementation deliberately makes the
process in-proc, but even then it doesn't seem to be initialised. Looks
like the only valid way to implement IThumbnailHandler is via
IInitializeWithStream.

--- a/SharpShell/SharpShell/SharpShell.csproj
+++ b/SharpShell/SharpShell/SharpShell.csproj
@@ -94,6 +94,10 @@
     <Compile Include="Helpers\ComStream.cs" />
     <Compile Include="Helpers\RegAsm.cs" />
     <Compile Include="InitializeWithFileServer.cs" />
+    <Compile Include="InitializeWithItemServer.cs" />
+    <Compile Include="Interop\IInitializeWithItem.cs" />
+    <Compile Include="Interop\IShellItem.cs" />
+    <Compile Include="Interop\SIGDN.cs" />
     <Compile Include="Interop\STATFLAG.cs" />
     <Compile Include="Helpers\Win32Helper.cs" />
     <Compile Include="InitializeWithStreamServer.cs" />
@@ -257,7 +261,7 @@
     </Compile>
     <Compile Include="Helpers\BitmapHelper.cs" />
     <Compile Include="Interop\DIB.cs" />
-    <Compile Include="SharpThumbnailHandler\SharpFileThumbnailHandler.cs" />
+    <Compile Include="SharpThumbnailHandler\SharpItemThumbnailHandler.cs" />
     <Compile Include="SharpThumbnailHandler\SharpThumbnailHandler.cs" />
     <Compile Include="ShellExtInitServer.cs" />
     <Compile Include="SharpDropHandler\SharpDropHandler.cs" />
